# notifications-via-rabbitmq

./: .env-example  Dockerfile  README.md  build_output.txt  docker-compose.yml  pyproject.toml
mail/: main.py
mail-notifier/: Dockerfile  connection.py  main.py  pyproject.toml  sg.py  test.py
phone/: main.py
phone-notifier/: main.py  pyproject.toml  test.py
