[tool.poetry]
name = "pushover-notifier"
version = "0.1.0"
description = ""
authors = ["Magnus <magnus@wemade.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
